package tn.zeros.marketmaster.entity.enums;

public enum AchievementTier {
    BRONZE,
    SILVER,
    GOLD,
    PLATINUM
}
