package tn.zeros.marketmaster.entity.enums;

public enum AssetType {
    STOCK,
    BOND,
    COMMODITY,
    CURRENCY
}
